--- a/course-management/src/main/resources/application-prod.properties
+++ b/course-management/src/main/resources/application-prod.properties
@@ -5,12 +5,14 @@ spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA Configuration for Production
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.generate-ddl=true
+spring.jpa.properties.hibernate.hbm2ddl.auto=create
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.defer-datasource-initialization=true
 
-# SQL Initialization - Only run if tables are empty
+# SQL Initialization - Run after schema creation
 spring.sql.init.mode=always
 spring.sql.init.data-locations=classpath:data.sql
 spring.sql.init.continue-on-error=true
