--- a/course-management/src/main/resources/application-prod.properties
+++ b/course-management/src/main/resources/application-prod.properties
@@ -5,8 +5,8 @@ spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA Configuration for Production
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.defer-datasource-initialization=true
 
