--- a/course-management/src/main/resources/application-prod.properties
+++ b/course-management/src/main/resources/application-prod.properties
@@ -5,13 +5,12 @@ spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA Configuration for Production
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.defer-datasource-initialization=true
 
 # SQL Initialization (inserts seed data only if tables exist)
-spring.sql.init.mode=always
+spring.sql.init.mode=never
 spring.sql.init.data-locations=classpath:data.sql
 spring.sql.init.continue-on-error=true
 
