--- a/course-management/src/main/resources/application-prod.properties
+++ b/course-management/src/main/resources/application-prod.properties
@@ -5,15 +5,16 @@ spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA Configuration for Production
-spring.jpa.hibernate.ddl-auto=validate
+#set below to validate after first run
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.defer-datasource-initialization=true
 
 # SQL Initialization (only run once when tables don't exist)
-spring.sql.init.mode=never
-# Remove these lines after first deployment:
-# spring.sql.init.data-locations=classpath:data.sql
-# spring.sql.init.continue-on-error=true
+spring.sql.init.mode=always
+# Comment these lines after first deployment:
+ spring.sql.init.data-locations=classpath:data.sql
+ spring.sql.init.continue-on-error=true
 
 # Server Configuration
 server.port=${PORT:8080}
